--- a/main.css
+++ b/main.css
@@ -3,8 +3,40 @@ body {
 }
 
 #panel {
-  background-color: rgba(245,245,245,0.8);
-  padding: 5px;
+  background-color: rgba(245,245,2);
+  padding: 10px;
   position: absolute;
   display: block;
+}
+#h1{
+  color:red;
+  background-color: black;
+  position: center;
+}
+li {list-style-type: none;
+font-size: 16pt;
+}
+.mail {
+margin: auto;
+padding-top: 10px;
+padding-bottom: 10px;
+width: 400px;
+background : #D8F1F8;
+border: 1px soild silver;
+}
+.mail h2 {
+margin-left: 38px;
+}
+input {
+font-size: 20pt;
+}
+input:focus, textarea:focus{
+background-color: lightyellow;
+}
+input submit {
+font-size: 12pt;
+}
+.rq {
+color: #FF0000;
+font-size: 10pt;
 }
